--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,15 @@ body {
   font-family: 'Nunito Sans', sans-serif;
 }
 
+i {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
@@ -92,4 +101,17 @@ body {
 
 .bi-plus-lg {
   color: green;
+}
+
+/**
+* ! style rules for label and some buttons
+**/
+
+.text-center {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.HomeBtn {
+  background-color: #fff;
 }
